--- a/app/src/main/res/layout/fragment_barber_home_page.xml
+++ b/app/src/main/res/layout/fragment_barber_home_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BarberHomePage" >
+    tools:context=".fragments.BarberHomePage" >
 
     <TextView
         android:id="@+id/barberhomepage_barberstitle_tv"
