--- a/app/src/main/res/layout/fragment_calendar_to_add_barbers_to_work.xml
+++ b/app/src/main/res/layout/fragment_calendar_to_add_barbers_to_work.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout6"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CalendarToAddBarbersToWork" >
+    tools:context=".fragments.CalendarToAddBarbersToWork" >
 
     <TextView
         android:id="@+id/calendartoaddbarberstowork_message_tv"
