--- a/app/src/main/res/layout/fragment_message_after_sign_up_as_barber_shop.xml
+++ b/app/src/main/res/layout/fragment_message_after_sign_up_as_barber_shop.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MessageAfterSignUpAsBarberShop">
+    tools:context=".fragments.MessageAfterSignUpAsBarberShop">
 
     <TextView
         android:id="@+id/messageAfterSignAsBarber_success_tv"
