--- a/app/src/main/res/layout/fragment_add_barber.xml
+++ b/app/src/main/res/layout/fragment_add_barber.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddBarber" >
+    tools:context=".fragments.AddBarber" >
 
     <TextView
         android:id="@+id/addbarber_name_tv"
