--- a/app/src/main/res/layout/fragment_avaliable_meetings_list.xml
+++ b/app/src/main/res/layout/fragment_avaliable_meetings_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout12"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AvaliableMeetingsList" >
+    tools:context=".fragments.AvaliableMeetingsList" >
 
     <TextView
         android:id="@+id/avaliablemeetingslist_listofmeetings_tv"
