--- a/app/src/main/res/layout/fragment_barbers_list_choose_for_work.xml
+++ b/app/src/main/res/layout/fragment_barbers_list_choose_for_work.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout7"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BarbersListChooseForWork" >
+    tools:context=".fragments.BarbersListChooseForWork" >
 
     <TextView
         android:id="@+id/barberslistchooseforwork_barbers_tv"
