--- a/app/src/main/res/layout/fragment_client_home_page.xml
+++ b/app/src/main/res/layout/fragment_client_home_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout9"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ClientHomePage" >
+    tools:context=".fragments.ClientHomePage" >
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/clienthomepage_seebarbersatmap_btn"
