--- a/app/src/main/res/layout/fragment_log_in_page.xml
+++ b/app/src/main/res/layout/fragment_log_in_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LogInPage">
+    tools:context=".fragments.LogInPage">
 
     <TextView
         android:id="@+id/loginpage_username_tv"
@@ -85,6 +85,7 @@
         android:layout_marginEnd="8dp"
         android:clickable="true"
         android:minHeight="48dp"
+        android:foreground="?attr/selectableItemBackground"
         android:text="Sign up as Client"
         android:textColor="@color/appblue"
         android:textSize="24sp"
@@ -94,7 +95,7 @@
         app:layout_constraintTop_toBottomOf="@+id/loginpage_login_btn" />
 
     <TextView
-        android:id="@+id/loginpagr_signupasbarber_tv"
+        android:id="@+id/loginpage_signupasbarber_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -103,6 +104,7 @@
         android:clickable="true"
         android:minHeight="48dp"
         android:text="Sign up as BarberShop"
+        android:foreground="?attr/selectableItemBackground"
         android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold|italic"
