--- a/app/src/main/res/layout/fragment_message_after_booking_meeting_page.xml
+++ b/app/src/main/res/layout/fragment_message_after_booking_meeting_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MessageAfterBookingMeetingPage">
+    tools:context=".fragments.MessageAfterBookingMeetingPage">
 
     <TextView
         android:id="@+id/messageafterbookingmettingpage_success_tv"
