--- a/app/src/main/res/layout/fragment_sign_up_as_client_page.xml
+++ b/app/src/main/res/layout/fragment_sign_up_as_client_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpAsClientPage">
+    tools:context=".fragments.SignUpAsClientPage">
 
     <TextView
         android:id="@+id/signupasclient_username_tv"
