--- a/app/src/main/res/layout/fragment_client_home_page.xml
+++ b/app/src/main/res/layout/fragment_client_home_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout9"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ClientHomePage" >
+    tools:context=".fragments.clientHomePage.ClientHomePage" >
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/clienthomepage_seebarbersatmap_btn"
@@ -61,23 +61,24 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/clienthomepage_barbershopslist_rv"
         android:layout_width="345dp"
-        android:layout_height="260dp"
+        android:layout_height="0dp"
         android:layout_marginTop="24dp"
+        app:layout_constraintBottom_toTopOf="@+id/clienthomepage_mymeetings_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginBottom="24dp"
         app:layout_constraintTop_toBottomOf="@+id/clienthomepage_barbershopslist_tv" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/clienthomepage_mymeetings_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:background="@drawable/shape_selector"
-        android:text="My meetings"
         android:padding="7dp"
+        android:text="My meetings"
         android:textColor="@color/white"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clienthomepage_barbershopslist_rv" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
