--- a/app/src/main/res/layout/fragment_barber_home_page.xml
+++ b/app/src/main/res/layout/fragment_barber_home_page.xml
@@ -55,4 +55,17 @@
         app:icon="@android:drawable/ic_menu_today"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/barberhomepage_addbarber_btn" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/barberhomepage_logout_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log out"
+        android:background="@drawable/shape_selector"
+        android:padding="15dp"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/barberhomepage_calendar_btn"
+        app:layout_constraintEnd_toStartOf="@+id/barberhomepage_calendar_btn"
+        app:layout_constraintStart_toEndOf="@+id/barberhomepage_addbarber_btn"
+        app:layout_constraintTop_toTopOf="@+id/barberhomepage_calendar_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
