--- a/app/src/main/res/layout/fragment_client_home_page.xml
+++ b/app/src/main/res/layout/fragment_client_home_page.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout9"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.clientHomePage.ClientHomePage" >
+    tools:context=".fragments.clientHomePage.ClientHomePage">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/clienthomepage_seebarbersatmap_btn"
@@ -14,9 +14,9 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/shape_selector"
+        android:padding="7dp"
         android:text="See barbers around you at map"
         android:textColor="@color/white"
-        android:padding="7dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,27 +63,28 @@
         android:layout_width="345dp"
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
+        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toTopOf="@+id/clienthomepage_mymeetings_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginBottom="24dp"
         app:layout_constraintTop_toBottomOf="@+id/clienthomepage_barbershopslist_tv" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/clienthomepage_mymeetings_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/shape_selector"
         android:padding="7dp"
         android:text="My meetings"
         android:textColor="@color/white"
-        android:layout_marginBottom="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/clienthomepage_logout_btn" />
 
     <ProgressBar
-        android:id="@+id/progressBar"
+        android:id="@+id/clienthomepage_progressbar_pg"
         style="?android:attr/progressBarStyle"
         android:layout_width="100dp"
         android:layout_height="100dp"
@@ -91,4 +92,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/clienthomepage_logout_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/shape_selector"
+        android:padding="7dp"
+        android:text="Log out"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="@+id/clienthomepage_mymeetings_btn"
+        app:layout_constraintEnd_toStartOf="@+id/clienthomepage_mymeetings_btn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/clienthomepage_mymeetings_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
