--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -21,11 +21,15 @@
         <action
             android:id="@+id/action_logInPage_to_barberHomePage"
             app:destination="@id/barberHomePage"
-            app:enterAnim="@android:anim/fade_in" />
+            app:enterAnim="@android:anim/fade_in"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_logInPage_to_clientHomePage"
             app:destination="@id/clientHomePage"
-            app:enterAnim="@android:anim/fade_in" />
+            app:enterAnim="@android:anim/fade_in"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
     </fragment>
 
     <fragment
@@ -61,7 +65,13 @@
         android:id="@+id/barberHomePage"
         android:name="com.example.barbersapplication.fragments.BarberHomePage"
         android:label="fragment_barber_home_page"
-        tools:layout="@layout/fragment_barber_home_page" />
+        tools:layout="@layout/fragment_barber_home_page" >
+        <action
+            android:id="@+id/action_barberHomePage_to_logInPage"
+            app:destination="@id/logInPage"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/addPicturesOfBarberWorks"
         android:name="com.example.barbersapplication.fragments.AddPicturesOfBarberWorks"
@@ -107,6 +117,7 @@
         <action
             android:id="@+id/action_editMeetingPage_to_clientHomePage"
             app:destination="@id/clientHomePage"
+            app:popEnterAnim="@android:anim/fade_in"
             app:popUpTo="@id/clientHomePage"
             app:popUpToInclusive="true" />
     </fragment>
@@ -137,6 +148,11 @@
         <action
             android:id="@+id/action_clientHomePage_to_barbersListAtBarber"
             app:destination="@id/barbersListAtBarber" />
+        <action
+            android:id="@+id/action_clientHomePage_to_logInPage"
+            app:destination="@id/logInPage"
+            app:popUpTo="@id/nav_graph"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/barbersListAtBarber"
