--- a/app/src/main/res/layout/fragment_add_barber.xml
+++ b/app/src/main/res/layout/fragment_add_barber.xml
@@ -7,6 +7,18 @@
     tools:context=".fragments.AddBarber" >
 
     <TextView
+        android:id="@+id/addbarber_texttoadddescription_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="Add description:"
+        android:textColor="@color/appblue"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="@+id/addbarber_texttoaddphotos_tv"
+        app:layout_constraintTop_toBottomOf="@+id/addbarber_texttoaddphotos_tv" />
+
+    <TextView
         android:id="@+id/addbarber_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -79,7 +91,20 @@
         app:layout_constraintBottom_toTopOf="@+id/addbarber_save_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addbarber_texttoaddphotos_tv"
+        app:layout_constraintTop_toBottomOf="@+id/addbarber_texttoadddescription_tv"
         tools:src="@tools:sample/avatars" />
+
+    <EditText
+        android:id="@+id/addbarber_texttoadddescription_et"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="@+id/addbarber_texttoadddescription_tv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/addbarber_texttoadddescription_tv"
+        app:layout_constraintTop_toTopOf="@+id/addbarber_texttoadddescription_tv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
