--- a/app/src/main/res/layout/fragment_barbers_list_at_barber.xml
+++ b/app/src/main/res/layout/fragment_barbers_list_at_barber.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout10"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.BarbersListAtBarber" >
+    tools:context=".fragments.BarbersListAtBarber.BarbersListAtBarber" >
 
     <TextView
         android:id="@+id/barberslistatbarber_barberslist_tv"
@@ -22,22 +22,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/barberslistatbarber_barberslist_rv"
-        android:layout_width="334dp"
-        android:layout_height="394dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="323dp"
+        android:layout_height="457dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/barberslistatbarber_barberslist_tv" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/barberslistatbarber_next_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_selector"
-        android:text="Next"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/barberslistatbarber_barberslist_rv" />
 </androidx.constraintlayout.widget.ConstraintLayout>
