--- a/app/src/main/res/layout/fragment_calendar_to_add_barbers_to_work.xml
+++ b/app/src/main/res/layout/fragment_calendar_to_add_barbers_to_work.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Choose date to add barbers to work"
+        android:text="Calendar"
         android:textColor="@color/appblue"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -25,20 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/calendartoaddbarberstowork_message_tv"
         app:layout_constraintStart_toStartOf="@+id/calendartoaddbarberstowork_message_tv"
         app:layout_constraintTop_toBottomOf="@+id/calendartoaddbarberstowork_message_tv" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/calendartoaddbarberstowork_next_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_selector"
-        android:text="Next"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/calendartoaddbarberstowork_calendar_cv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
