--- a/app/src/main/res/layout/fragment_chosen_barber_page.xml
+++ b/app/src/main/res/layout/fragment_chosen_barber_page.xml
@@ -11,9 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
-        android:padding="20dp"
         android:background="@drawable/shape_selector"
-        android:text="See Barber posts"
+        android:padding="20dp"
+        android:text="See Barber post"
         android:textColor="@color/white"
         app:icon="?attr/actionModeCutDrawable"
         app:layout_constraintEnd_toEndOf="parent"
